# timew-sync-client

./: .gitignore  .gitlab-ci.yml  README.md  default.nix  example.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  shell.nix
.github/workflows/: python-publish.yml  tests.yml
tests/: test_auth.py  test_cli.py  test_dispatch.py  test_file_parser.py  test_interval.py  test_io_handler.py  test_json_converter.py  test_main.py  test_tokenizer.py
timewsync/: __init__.py  __main__.py  auth.py  cli.py  config.py  dispatch.py  file_parser.py  interval.py  io_handler.py  json_converter.py  logging_helpers.py  main.py  paths.py  tokenizer.py
