[metadata]
name = timewsync
version = 0.0.1
description = Timewarrior Synchronization client
long_description = file: README.md
license = MIT License

[options]
packages = timewsync
install_requires =
  requests
  importlib; python_version == "2.6"

[options.entry_points]
console_scripts =
  timewsync = timewsync:main
