[metadata]
name = timewsync
version = 1.0.0
description = Timewarrior Synchronization client
long_description = file: README.md
license = MIT License

[options]
packages = timewsync
install_requires =
  requests
  jwcrypto
  python_jwt
  six
  colorama
  importlib; python_version == "2.6"

[options.entry_points]
console_scripts =
  timewsync = timewsync:main
