[metadata]
name = timewsync
version = 1.0.0
description = Timewarrior Synchronization client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timewarrior-synchronize/timew-sync-client
project_urls =
  Bug Tracker = https://github.com/timewarrior-synchronize/timew-sync-client/issues
  Wiki = https://github.com/timewarrior-synchronize/timew-sync-client/wiki
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
license = MIT License

[options]
packages = timewsync
install_requires =
  requests
  jwcrypto
  python_jwt
  six
  colorama
  importlib; python_version == "2.6"
python_requires = >=3.7

[options.entry_points]
console_scripts =
  timewsync = timewsync:main

[flake8]
exclude = venv

